[package]
name = "prime-number-catacombs"
version = "0.1.0"
authors = ["Bryan McClain <bamcclain10@gmail.com>"]
description = "Rust WASM backend to run the Prime Number Catacombs"
license = "GPL-3.0-or-later"
repository = "https://github.com/ComprosoftCEO/PrimeNumberCatacombsWeb"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
num = { version = "0.4.0", features = ["rand"] }
lazy_static = "1.4.0"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
